Actualizacion de portafolio

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   proyectos, que si bien no estan finalizados, tienen como
                   objetivo poder demostrar mis capacidades, principalmente
                   utilizando tecnologías en la cuales me siento bastante cómodo
-                  utilizándolas, como son Angular y Node.js.
+                  utilizándolas, como son React, Angular y Node.js.
                </p>
 
                <p></p>
@@ -92,6 +92,10 @@
                   <div class="skill">
                      <i class="fab fa-angular skill__icon icon--angular"></i>
                      <div class="skill__description">ANGULAR</div>
+                  </div>
+                  <div class="skill">
+                     <i class="fab fa-react skill__icon icon--react"></i>
+                     <div class="skill__description">REACT</div>
                   </div>
                   <div class="skill">
                      <i class="fas fa-database skill__icon icon--database"></i>
